--- a/GMSClient/Pages/ShiftPatterns.razor
+++ b/GMSClient/Pages/ShiftPatterns.razor
@@ -4,13 +4,12 @@
 @inject NavigationManager navigationManager
 @inject StateContainer stateContainer
 @inject NotificationService notificationService
+@inject DialogService dialogService
 
 <h1>تنظیم الگوی شیفتها</h1>
-<RadzenNotification />
 @if (shiftPatternHeaders == null)
 {
-<p><em>Loading...</em></p>
-}
+<p><em>Loading...</em></p> }
 else
 {
 
@@ -48,7 +47,7 @@ else
                 </td>
                 <td>
                     <button class="btn btn-dark py-1 my-1" @onclick="@(e => LoadForUpdate(item.ID))">ویرایش</button>
-                    <button class="btn btn-dark py-1 my-1" @onclick="@(e => DeleteRecord(item.ID))">حذف</button>
+                    <button class="btn btn-dark py-1 my-1" @onclick="@(e => ShowDeleteDialog(item.ID))">حذف</button>
                     <button class="btn btn-dark py-1 my-1" @onclick="@(e => ShowPatternConfig(item.ID))">تنظیم ساعت ها</button>
                 </td>
             </tr>}
@@ -60,6 +59,12 @@ else
 @code { private ShiftPatternHeader shiftPatternHeaderobj;
     private ShiftPatternHeader[] shiftPatternHeaders;
     private string BackendMesssage;
+
+    protected override void OnInitialized()
+    {
+        dialogService.OnOpen += Open;
+        dialogService.OnClose += Close;
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -104,7 +109,23 @@ else
         shiftPatternHeaderobj = new ShiftPatternHeader();
     }
 
-    private async Task<bool> DeleteRecord(long id)
+
+    void Open(string title, Type type, Dictionary<string, object> parameters, DialogOptions options)
+    {
+        StateHasChanged();
+    }
+
+
+    void Close(dynamic result)
+    {
+        if(result != null && ((object)result).ToLong() > 0)
+        {
+            DeleteRecord(((object)result).ToLong());
+        }
+        StateHasChanged();
+    }
+
+    private async Task DeleteRecord(long id)
     {
         shiftPatternHeaderobj = shiftPatternHeaders.FirstOrDefault(l => l.ID == id);
         var jsondata = JsonConvert.SerializeObject(shiftPatternHeaderobj);
@@ -112,40 +133,49 @@ else
         var data = BackendEngine.Call("ShiftPatternHeaderDelete", jsondata, stateContainer.Token);
 
         await ProcessBackendResultData(data);
-
-        return await Task.FromResult(true);
     }
 
-    private async Task<bool> UpdateRecord()
-    {
-        var jsondata = JsonConvert.SerializeObject(shiftPatternHeaderobj);
+    async Task ShowDeleteDialog(long id) => await dialogService.OpenAsync("حذف می شود", ds =>
+    @<RadzenCard Style="padding: 20px;">
+         <p Style="margin-bottom: 10px;">آیا اطمینان دارید؟</p>
+        <div class="row">
+            <div class="col-md-12">
+                <RadzenButton Text="بله" Click="()=> ds.Close(id)" Style="margin-bottom: 10px; width: 150px" />
+                <RadzenButton Text="خیر" Click="()=> ds.Close(0)" ButtonStyle="ButtonStyle.Secondary" Style="margin-bottom: 10px; width: 150px" />
+            </div>
+        </div>
+    </RadzenCard>);
+        
 
-        var data = BackendEngine.Call("ShiftPatternHeaderUpdate", jsondata, stateContainer.Token);
+private async Task UpdateRecord()
+{
+var jsondata = JsonConvert.SerializeObject(shiftPatternHeaderobj);
 
-        await ProcessBackendResultData(data);
+var data = BackendEngine.Call("ShiftPatternHeaderUpdate", jsondata, stateContainer.Token);
 
-        return await Task.FromResult(true);
-    }
+await ProcessBackendResultData(data);
 
-
-    private async Task ProcessBackendResultData(string data)
-    {
-        var msg = data.GetBackendErrorMsg();
-        if (msg.Length > 0)
-        {
-            BackendMesssage = msg;
-            await ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = BackendMesssage, Duration = 4000 });
-        }
-        else
-        {
-            await ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = Extensions.SucceedMessage, Duration = 4000 });
-            await LoadData();
-        }
-    }
+}
 
 
-    async Task ShowNotification(NotificationMessage message)
-    {
-        notificationService.Notify(message);
-        await InvokeAsync(() => { StateHasChanged(); });
-    } }
+private async Task ProcessBackendResultData(string data)
+{
+var msg = data.GetBackendErrorMsg();
+if (msg.Length > 0)
+{
+BackendMesssage = msg;
+await ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = BackendMesssage, Duration = 4000 });
+}
+else
+{
+await ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = Extensions.SucceedMessage, Duration = 4000 });
+await LoadData();
+}
+}
+
+
+async Task ShowNotification(NotificationMessage message)
+{
+notificationService.Notify(message);
+await InvokeAsync(() => { StateHasChanged(); });
+}}
