--- a/GMSClient/Shared/MainLayout.razor
+++ b/GMSClient/Shared/MainLayout.razor
@@ -10,6 +10,8 @@
     </div>
 
     <div class="content px-4">
+        <RadzenDialog />
+        <RadzenNotification />
         @Body
     </div>
 </div>
