--- a/GMSClient/Pages/CalendarManage.razor
+++ b/GMSClient/Pages/CalendarManage.razor
@@ -14,38 +14,61 @@
         <div class="col-md-4 mb-3">
             <input class="form-control" @bind="dateTimeRef.MonthShName" placeholder="ماه" />
             <div class="mr-1">
-                <button type="submit" class=" btn btn-success" value="ثبت">جستجو</button>
+                <button type="submit" class=" btn btn-success my-1 mt-3" value="ثبت">جستجو</button>
             </div>
 
         </div>
     </div>
-    <br />
+    
 </EditForm>
 
 <div class="table-responsive">
-    <table class="table table-hover" style="table-layout: auto; width: 100%; ">
-        <thead class="thead-dark">
+    <table class="table table-hover" style="width: 65%;">
+        <thead class="thead-dark" style="border-radius: 4px">
             <tr>
-                <th scope="col">تاریخ</th>
-                <th scope="col">روز</th>                
+                <th>تاریخ</th>
+                <th>روز</th>
+                <th>الگوی شیفت کنونی</th>
+                <th>انتخاب الگوی شیفت</th>
+
             </tr>
         </thead>
+
         <tbody>
             @foreach (var item in dateTimeReflst)
             {
-            <tr>
-                <td>
-                    @item.DateSh
-                </td>
-                <td>
-                    @item.WeekDayShName
-                </td>
-            </tr>
-}
+
+                <tr>
+                    <td>
+                        @item.DateSh
+                    </td>
+                    <td>
+                        @item.WeekDayShName
+                    </td>
+
+                    <td>
+                        @item.PatternTitle
+                    </td>
+
+                    <td>
+                        <select class="form-control" @onchange="@(e => shiftCustomerUpdate(item.DateTimeRef_ID,  e.Value.ToLong()))">
+                            <option value="" disabled selected>انتخاب</option>
+                            
+                            @foreach (var element in shiftPatternHeaders)
+                            {
+
+                                <option value="@element.ID">@element.Title</option>
+                            }
+                        </select>
+                    </td>
+                   
+
+                </tr>
+
+            }
         </tbody>
     </table>
 </div>
-
 
 @code { private DateTimeRef[] dateTimeReflst;
     private DateTimeRef dateTimeRef;
@@ -59,7 +82,7 @@
             navigationManager.NavigateTo("/");
         }
 
-        dateTimeReflst = new DateTimeRef[] {};
+        dateTimeReflst = new DateTimeRef[] { };
         dateTimeRef = new DateTimeRef();
 
 
@@ -93,6 +116,27 @@
         else
             dateTimeReflst = JsonConvert.DeserializeObject<DateTimeRef[]>(data);
     }
+
+    private async Task shiftCustomerUpdate(long dateTimeRefID, long shiftHeaderID)
+    {
+        var param = "{" + string.Format("\"{0}\": \"{1}\", \"{2}\": \"{3}\"", "DateTimeRef_ID", dateTimeRefID, "ShiftPatterHeaderID", shiftHeaderID) + "}";
+
+        var data = BackendEngine.Call("ShiftPatternCustomerUpdate", param, stateContainer.Token);
+
+
+
+        var msg = data.GetBackendErrorMsg();
+        if (msg.Length > 0)
+        {
+            BackendMesssage = msg;
+            await ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = BackendMesssage, Duration = 4000 });
+        } else
+            await Search();
+
+    }
+
+
+
 
     async Task ShowNotification(NotificationMessage message)
     {
