--- a/GMSClient/Shared/NavMenu.razor
+++ b/GMSClient/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-calendar" aria-hidden="true"></span> تنظیم تقویم کاری
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="newtrainingsession">
+                <span class="oi oi-people" aria-hidden="true"></span> جلسه تمرینی جدید 
+            </NavLink>
+        </li>
     </ul>
 </div>
 
